k8s/redis-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec: 
  type: ClusterIP # NodePort is to expose a port, we just use it in dev mode, not in prod.
                  # NodePorts primarly allow access from the outside world into our k8s cluster
                  # ClusterIP is similar to NodePort but primarly it doesn't allow access from the outside world into our cluster. 
                  # It is just designed for communication between pods inside the cluster. To allow this comunication with the 
                  # outside when using ClusterIP we use the Ingress service. So it is like the NodePort does the work of 
                  # ClusterIp + Ingress
  selector: 
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
