k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional config option around the ingress object we gonna create
    kubernetes.io/ingress.class: nginx # create an ingress controller base in the nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #this is what we gonna use to revrite rules in server pod and remove "/api" from url
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
